fix: wrong background colour

--- a/apps/frontend/src/app.css
+++ b/apps/frontend/src/app.css
@@ -12,7 +12,7 @@
 html,
 body,
 #svelte-body {
-  background-color: whitesmoke;
+  background-color: #F9F9F9;
   font-family: "Chivo";
   margin: 0;
   height: 100%;
